--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -129,7 +129,7 @@ body
 	flex-basis: 22.22%
 	text-align: right
 
-	button.checkbox-button
+	.checkbox-button
 		text-align: center
 		border-radius: 3px
 		background-color: $accent
@@ -183,7 +183,7 @@ body
 			&:hover
 				text-decoration: underline
 				cursor: pointer
-		i
+		>i
 			font-size: 20px
 			display: inline
 			color: #000
@@ -199,7 +199,9 @@ body
 		border-radius: 3px
 		z-index: 20
 		i
-			padding: 0
+			font-size: 20px
+			display: inline
+			color: #000
 		.dropdown__item
 			color: $text
 			margin-bottom: 5px
